# ai-sdk-stream-python

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  lint.yml  release.yml
example/: README.md  pyproject.toml
example/backend/: main.py  requirements.txt
example/backend/routes/: chat.py
example/backend/services/: db_service.py  llm_service.py
example/chatbot-backend/: .env.example  README.md  app.py  pyproject.toml
example/chatbot-backend/routes/: chat.py  document.py
example/chatbot-backend/services/: llm_config.py  llm_service.py  redis_store.py
example/chatbot-backend/tools/: __init__.py  create_document.py  edit_document.py  get_weather.py  request_suggestions.py  update_document.py
example/frontend/: .env.local.example  .gitignore  biome.jsonc  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
example/frontend/.claude/: settings.json
example/frontend/.github/hooks/: ultracite.json
example/frontend/api/: index.py
example/frontend/api/routes/: chat.py
example/frontend/api/services/: db_service.py  llm_service.py
example/frontend/app/: globals.css  layout.tsx  page.tsx
example/frontend/app/api/chat/: route.ts
example/frontend/components/ai-elements/: conversation.tsx  prompt-input.tsx
example/frontend/components/ui/: button-group.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input-group.tsx  input.tsx  select.tsx  spinner.tsx  textarea.tsx  tooltip.tsx
example/frontend/tests/: chat.spec.ts
example/frontend/tests/helpers/: sse-stream.ts
src/ai_sdk_stream_python/: AGENTS.md  __init__.py  collect.py  context.py  events.py  state.py  types.py
src/ai_sdk_stream_python/contrib/: __init__.py  openai.py
tests/: test_collect.py  test_context.py  test_contrib_openai.py  test_filtering.py  test_types.py
