[project]
name = "ai-sdk-stream-python-example"
version = "0.1.0"
description = "Example FastAPI backend for ai-sdk-stream-python"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ai-sdk-stream-python",
]

[tool.uv.sources]
ai-sdk-stream-python = { path = "..", editable = true }

[tool.uv]
package = false
