[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Python FastAPI backend for the Vercel Chatbot, using ai-sdk-stream-python"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ai-sdk-stream-python",
]

[tool.uv.sources]
ai-sdk-stream-python = { path = "../..", editable = true }

[tool.uv]
package = false
